<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/spacing_large"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal">

    <ImageView
        android:layout_width="@dimen/display_4_text_size"
        android:layout_height="@dimen/display_4_text_size"
        android:layout_margin="@dimen/dialog_title_spacing"
        android:src="@drawable/ic_network_error" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:text="@string/error_network_title"
        android:textColor="#23A352"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:gravity="center"
        android:text="@string/error_network_message"
        android:textColor="#3F3F45"
        android:textSize="@dimen/text_body" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_retry"
        style="@style/AppTheme.IconButton"
        android:layout_margin="@dimen/dialog_title_spacing"
        android:text="@string/error_network_try_again"
        android:textColor="#201F24"
        android:textStyle="bold" />

</LinearLayout>