<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/select_image_mode_title"
            android:textColor="#88919C"
            android:textSize="@dimen/text_body" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="#97C5E8" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="@dimen/padding_normal"
            android:text="@string/select_image_mode_camera"
            android:textAllCaps="false"
            android:textColor="#1B79EC"
            android:textSize="@dimen/text_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="#97C5E8" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="@dimen/padding_normal"
            android:text="@string/select_image_mode_gallery"
            android:textAllCaps="false"
            android:textColor="#1B79EC"
            android:textSize="@dimen/text_title" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        fontPath="fonts/OpenSans-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:background="@drawable/dialog_background"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="@dimen/padding_normal"
        android:text="@string/select_image_mode_cancel"
        android:textAllCaps="false"
        android:textColor="#1B79EC"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

</LinearLayout>