<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FAFAFA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activation_title"
            android:textColor="#3f3f3f"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            style="@style/AppTheme.IconButton"
            android:src="@drawable/ic_left_arrow" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_large"
                android:text="@string/activation_notify"
                android:textColor="#3f3f3f"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/tv_sent_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:text="@string/activation_sent_to"
                android:textColor="#A0A0A0"
                android:textSize="@dimen/text_small_body" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_code_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_normal"
                    android:layout_weight="1"
                    android:background="@drawable/activation_code_background"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:textColor="#49CFD8"
                    android:textSize="@dimen/text_headline" />

                <TextView
                    android:id="@+id/tv_code_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_normal"
                    android:layout_weight="1"
                    android:background="@drawable/activation_code_background"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:textColor="#49CFD8"
                    android:textSize="@dimen/text_headline" />

                <TextView
                    android:id="@+id/tv_code_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_normal"
                    android:layout_weight="1"
                    android:background="@drawable/activation_code_background"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:textColor="#49CFD8"
                    android:textSize="@dimen/text_headline" />

                <TextView
                    android:id="@+id/tv_code_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_normal"
                    android:layout_weight="1"
                    android:background="@drawable/activation_code_background"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:textColor="#49CFD8"
                    android:textSize="@dimen/text_headline" />

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_normal"
                        android:text="@string/activation_not_receive_a_code"
                        android:textSize="@dimen/text_small_body" />

                    <TextView
                        android:id="@+id/tv_resend_activation_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_resend"
                        android:textColor="#49CFD8"
                        android:textSize="@dimen/text_small_body" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="#D3D3D3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_1"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/activation_button_background"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_2"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_3"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="#D3D3D3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_4"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                    <TextView
                        android:id="@+id/tv_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/activation_button_background"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_5"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                    <TextView
                        android:id="@+id/tv_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_6"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="#D3D3D3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_7"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                    <TextView
                        android:id="@+id/tv_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/activation_button_background"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_8"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                    <TextView
                        android:id="@+id/tv_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_9"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="#D3D3D3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#D1D4DB"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal" />

                    <TextView
                        android:id="@+id/tv_0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/activation_button_background"
                        android:gravity="center"
                        android:padding="@dimen/padding_normal"
                        android:text="@string/activation_active_codes_0"
                        android:textColor="#000"
                        android:textSize="@dimen/text_headline" />

                    <ImageView
                        android:id="@+id/imv_delete"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#D1D4DB"
                        android:padding="@dimen/padding_normal"
                        android:src="@drawable/ic_backspace_arrow" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </FrameLayout>

</LinearLayout>